# reindexer-java

./: .gitignore  README.md  header.txt  pom.xml
.github/workflows/: pr-build-workflow.yml  release-build-workflow.yml
builtin-adapter/: BuiltinAdapter.cpp  BuiltinAdapter.h  CMakeLists.txt
src/main/java/ru/rt/restream/reindexer/: AggregationResult.java  CloseableIterator.java  CollateMode.java  Configuration.java  DeferredResult.java  EnumType.java  FieldType.java  Index.java  IndexType.java  JsonIterator.java  JsonReader.java  Namespace.java  NamespaceOptions.java  NamespaceScanner.java  Query.java  QueryLogBuilder.java  QueryResultIterator.java  QueryResultJsonIterator.java  ReindexScanner.java  Reindexer.java  ReindexerConfiguration.java  ReindexerIndex.java  ReindexerNamespace.java  ReindexerResponse.java  ResultIterator.java  Transaction.java  package-info.java
src/main/java/ru/rt/restream/reindexer/annotations/: Convert.java  Enumerated.java  FullText.java  Hnsw.java  Ivf.java  Joined.java  Json.java  Metric.java  Namespace.java  NamespaceAnnotationScanner.java  Namespaces.java  Reindex.java  ReindexAnnotationScanner.java  Reindexes.java  Serial.java  Transient.java  VecBf.java  package-info.java
src/main/java/ru/rt/restream/reindexer/binding/: Binding.java  (+7 more)
src/main/resources/: default-builtin-server-config.yml
src/test/java/ru/rt/restream/category/: BuiltinTest.java  CprotoTest.java
src/test/java/ru/rt/restream/util/: ReindexerUtils.java
src/test/resources/: builtin-server.crt  builtin-server.jks  builtin-server.key  default-builtin-server-config.yml
(+187 files in other folders)
